@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,7 +14,7 @@ package org.openhab.binding.mqtt.generic.values;
 
 import static java.util.function.Predicate.not;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -45,7 +45,7 @@ public class TextValue extends Value {
      *            will be allowed.
      */
     public TextValue(String[] states) {
-        super(CoreItemFactory.STRING, Collections.singletonList(StringType.class));
+        super(CoreItemFactory.STRING, List.of(StringType.class));
         Set<String> s = Stream.of(states).filter(not(String::isBlank)).collect(Collectors.toSet());
         if (!s.isEmpty()) {
             this.states = s;
@@ -55,18 +55,18 @@ public class TextValue extends Value {
     }
 
     public TextValue() {
-        super(CoreItemFactory.STRING, Collections.singletonList(StringType.class));
+        super(CoreItemFactory.STRING, List.of(StringType.class));
         this.states = null;
     }
 
     @Override
-    public void update(Command command) throws IllegalArgumentException {
+    public StringType parseCommand(Command command) throws IllegalArgumentException {
         final Set<String> states = this.states;
         String valueStr = command.toString();
         if (states != null && !states.contains(valueStr)) {
             throw new IllegalArgumentException("Value " + valueStr + " not within range");
         }
-        state = new StringType(valueStr);
+        return new StringType(valueStr);
     }
 
     /**
